syntax = "proto3";

option csharp_namespace = "racedispatcher.Protos";

service HandlerMessage {
	rpc AnalyzeNewImage (NewImageRequest) returns (NewImageResponse);
}

message NewImageRequest {
	string imageName = 1;
}

message NewImageResponse {};